# gossip

./: .cvsignore  .gitignore  AUTHORS  CONTRIBUTORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  gossip.desktop.in  gossip.desktop.in.in  gossip.schemas.in  gossip.spec.in  omf.make
data/: Makefile.am
data/glade/: Makefile.am  chat.glade  group-chat.glade  main.glade  transports.glade
data/packaging/: Makefile.am
data/packaging/mac/: Gossip.icns  Info.plist.in  Makefile.am  environment.sh  gossip.bundle  gtkrc
data/pixmaps/: Makefile.am
data/win32/: Makefile.am  gossip.iss
help/: ChangeLog  Makefile.am  gossip.omf.in
help/C/: .cvsignore  Makefile.am  gossip-C.omf  gossip.xml
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/oc/: oc.po
help/sl/: sl.po
help/sv/: sv.po
libgossip/: .cvsignore  Makefile.am  gossip-account-manager.c  gossip-account-manager.h  gossip-account.c  gossip-account.dtd  gossip-account.h  gossip-async.c  gossip-async.h  gossip-avatar.c  gossip-avatar.h  gossip-chatroom-contact.c  gossip-chatroom-contact.h  gossip-chatroom-invite.c  gossip-chatroom-invite.h  gossip-chatroom-manager.c  gossip-chatroom-manager.h  gossip-chatroom-provider.c  gossip-chatroom-provider.h  gossip-chatroom.c  gossip-chatroom.dtd  gossip-chatroom.h  gossip-conf-cocoa.c  gossip-conf-gnome.c  gossip-conf-windows.c  gossip-conf.h  gossip-contact-manager.c  gossip-contact-manager.h  gossip-contact.c  gossip-contact.dtd  gossip-contact.h  gossip-debug.c  gossip-debug.h  gossip-ebook.c  gossip-ebook.h  gossip-event-manager.c  gossip-event-manager.h  gossip-event.c  gossip-event.h  gossip-ft-provider.c  (+64 more)
libloudermouth/: Makefile.am  libloudermouth-marshal-main.c  libloudermouth-marshal.list  lm-bs-client.c  lm-bs-client.h  lm-bs-listener.c  lm-bs-listener.h  lm-bs-private.h  lm-bs-receiver.c  lm-bs-receiver.h  lm-bs-sender.c  lm-bs-sender.h  lm-bs-session.c  lm-bs-session.h  lm-bs-transfer.c  lm-bs-transfer.h  lm-debug.h  lm-internals.h  lm-parser.h  lm-sha.h  lm-sock.h  loudermouth.h
peekaboo/: Makefile.am
peekaboo/data/: .cvsignore  GNOME_Peekaboo_Applet.server.in.in  GNOME_Peekaboo_Applet.xml  Makefile.am
peekaboo/src/: .cvsignore  Makefile.am  peekaboo-applet.c  peekaboo-applet.h  peekaboo-dbus.c  peekaboo-dbus.h  peekaboo-galago.c  peekaboo-galago.h  peekaboo-stock.c  peekaboo-stock.h  peekaboo-utils.c  peekaboo-utils.h
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  az.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  he.po  hr.po  hu.po  it.po  lt.po  ml.po  ms.po  nb.po  ne.po  nl.po  no.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  (+10 more)
protocols/: Makefile.am  aim.protocol  gossip-protocol.dtd  icq.protocol  msn.protocol  yahoo.protocol
protocols/jabber/: .cvsignore  Makefile.am  gossip-jabber-chatrooms.c  gossip-jabber-chatrooms.h  gossip-jabber-disco.c  gossip-jabber-ft-utils.c  gossip-jabber-ft-utils.h  gossip-jabber-ft.c  gossip-jabber-ft.h  gossip-jabber-helper.c  gossip-jabber-helper.h  gossip-jabber-private.h  gossip-jabber-services.c  gossip-jabber-services.h  gossip-jabber-utils.c  gossip-jabber-utils.h  gossip-jabber-vcard.c  gossip-jabber-vcard.h  gossip-jabber.c  gossip-jabber.h  gossip-jid.c  gossip-jid.h  gossip-sha.c  gossip-sha.h  gossip-transport-accounts.c  gossip-transport-discover.c  gossip-transport-discover.h  gossip-transport-protocol.c  gossip-transport-protocol.h  gossip-transport-register.c  gossip-transport-register.h
protocols/telepathy/: Makefile.am  gossip-telepathy-chatrooms.c  gossip-telepathy-chatrooms.h  gossip-telepathy-cmgr.c  gossip-telepathy-cmgr.h  gossip-telepathy-contact-list.c  gossip-telepathy-contact-list.h  gossip-telepathy-contacts.c  gossip-telepathy-contacts.h  gossip-telepathy-group.c  gossip-telepathy-group.h  gossip-telepathy-marshal-main.c  gossip-telepathy-marshal.list  gossip-telepathy-message.c  gossip-telepathy-message.h  gossip-telepathy-private.h  gossip-telepathy.c  gossip-telepathy.h
src/: .cvsignore  Makefile.am  eel-ellipsizing-label.c  eggtreemodelfilter.c  ephy-spinner.c  ephy-spinner.h  gossip-about-dialog.c  gossip-about-dialog.h  gossip-about.c  gossip-about.h  gossip-account-button.c  gossip-account-button.h  gossip-account-chooser.c  gossip-account-chooser.h  gossip-account-dialog.c  gossip-account-dialog.h  gossip-account-info-dialog.c  gossip-account-info-dialog.h  gossip-account-widget-generic.c  gossip-account-widget-generic.h  gossip-account-widget-irc.c  gossip-account-widget-irc.h  gossip-account-widget-jabber.c  gossip-account-widget-jabber.h  gossip-account-widget-msn.c  gossip-account-widget-msn.h  gossip-account.c  gossip-account.h  gossip-accounts-dialog.c  gossip-accounts-dialog.h  gossip-accounts-window.c  gossip-accounts-window.h  gossip-add-contact-dialog.c  gossip-add-contact-dialog.h  gossip-add-contact-window.c  gossip-add-contact-window.h  gossip-add-contact.c  gossip-add-contact.h  gossip-app.c  gossip-app.h  (+207 more)
src/sounds/: .cvsignore  Makefile.am  gossip.soundlist.in
ui/: Makefile.am  chat.glade  connect.glade  druid.glade  file-transfer.glade  file-transfer.gladep  group-chat.glade  main.glade  transports.glade
ui/icons/: Makefile.am  resource.rc
ui/pixmaps/: .cvsignore  Makefile.am  gossip-icons.xcf
ui/svg/: license
