AC_INIT(src)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gossip, 0.5)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AM_PATH_GLIB_2_0 
AC_PATH_X

AC_PROG_INTLTOOL
AC_PATH_PROG(GCONFTOOL, gconftool-2)

MRP_COMPILE_WARNINGS

AM_GCONF_SOURCE_2

dnl ==========================================================================
dnl
dnl Library Dependencies, uses pkg-config to detect correct version, etc
dnl
dnl ==========================================================================

dnl If you add a version number here, you *must* add an AC_SUBST line for
dnl it too, or it will never make it into the spec file!

GLIB_REQUIRED=2.0.3
GTK_REQUIRED=2.0.4
LIBGLADE_REQUIRED=2.0.0
LOUDMOUTH_REQUIRED=0.14.1.99
GCONF_REQUIRED=1.2.0
LIBGNOMEUI_REQUIRED=2.0.0
DESKTOP_FILE_UTILS_REQUIRED=0.2.90

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)
AC_SUBST(LIBGLADE_REQUIRED)
AC_SUBST(LOUDMOUTH_REQUIRED)
AC_SUBST(GCONF_REQUIRED)
AC_SUBST(LIBGNOMEUI_REQUIRED)
AC_SUBST(DESKTOP_FILE_UTILS_REQUIRED)

dnl To make the egg stuff build properly, should have a real test...
AC_DEFINE(HAVE_GTK_MULTIHEAD,0,[gtk+ with multihead support found])
dnl -----------------------------------------------------------

dnl ================================
dnl | Pkg-Config dependency checks |---------------------------
dnl ================================
PKG_CHECK_MODULES(GOSSIP,
[
	glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0
	gtk+-2.0 >= $GTK_REQUIRED
	libglade-2.0 >= $LIBGLADE_REQUIRED 
	loudmouth-1.0 >= $LOUDMOUTH_REQUIRED
	gconf-2.0 >= $GCONF_REQUIRED
	libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED
])


dnl -----------------------------------------------------------
dnl Check for autoaway
dnl -----------------------------------------------------------

dnl Check for XScreenSaver
old_LIBS="$LIBS"
old_CFLAGS="$CFLAGS"
LIBS="$LIBS -L$x_libraries $GOSSIP_LIBS"
CFLAGS="$CFLAGS -L$x_libraries $GOSSIP_CFLAGS"
XSS_LIBS="no"
XSS_HEADERS="no"
AC_CHECK_LIB(Xext, XScreenSaverRegister,[XSS_LIBS="-L$x_libraries"],[],[-lX11 -lXext -lm])
AC_CHECK_LIB(Xss, XScreenSaverRegister,[XSS_LIBS="-L$x_libraries -lXss"],[],[-lX11 -lXext -lm])
if test \! "$XSS_LIBS" = "no"; then
   AC_TRY_COMPILE([
#include <X11/extensions/scrnsaver.h>
		],[],[enable_xss=no],[
		AC_DEFINE(USE_SCREENSAVER, 1, [Define if we're using XScreenSaver.])
		])
else
    XSS_LIBS=""
    enable_xss=no
fi
LIBS="$old_LIBS"
CFLAGS="$old_CFLAGS"

GOSSIP_CFLAGS="$GOSSIP_CFLAGS $XSS_CFLAGS"
GOSSIP_LIBS="$GOSSIP_LIBS $XSS_LIBS"

AC_SUBST(GOSSIP_CFLAGS)
AC_SUBST(GOSSIP_LIBS)
dnl -----------------------------------------------------------


dnl  ------------------
dnl | Language Support |---------------------------------------
dnl  ------------------
GETTEXT_PACKAGE=gossip
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package name])

ALL_LINGUAS="az ca cs cy da de es fr it ml nl no pl pt ru sr sr@Latn sv zh_CN"

AM_GLIB_GNU_GETTEXT

if test "x$prefix" = "xNONE"; then
  GOSSIP_LOCALEDIR=$ac_default_prefix/share/locale
else
  GOSSIP_LOCALEDIR=$prefix/share/locale
fi
AC_DEFINE_UNQUOTED(GOSSIP_LOCALEDIR, "$GOSSIP_LOCALEDIR",[locale directory])
dnl -----------------------------------------------------------

CFLAGS="$CFLAGS $WARN_CFLAGS"

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_OUTPUT([
Makefile
ui/Makefile
ui/pixmaps/Makefile
src/Makefile
src/sounds/Makefile
po/Makefile.in
gossip.spec
])

echo
echo "Gossip prefix: $prefix"
echo
