include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gossip
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = 					\
	figures/gossip_personal_details.png	\
	figures/gossip_roster.png		\
	figures/gossip-available.png		\
	figures/gossip-away.png			\
	figures/gossip-busy.png			\
	figures/gossip-extended-away.png	\
	figures/gossip-offline.png

DOC_LINGUAS = es sv
