include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gossip
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = 					\
	figures/gossip-personal-details.png	\
	figures/gossip-roster.png		\
	figures/gossip-available.png		\
	figures/gossip-away.png			\
	figures/gossip-busy.png			\
	figures/gossip-extended-away.png	\
	figures/gossip-offline.png

DOC_LINGUAS = cs de es fr oc sv
